--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.main_container {
+.main-container {
   display: flex;
   height: 75vh;
   flex-direction: row;
@@ -36,18 +36,75 @@ body, html {
   display: flex;
   /* height: 60%; */
   width: 90%;
-  text-align: left;
+  text-align: justify;
   text-overflow: hidden;
   opacity: 1;
   text-wrap: wrap;
 }
 
-
-
-.content {
-  height: 200vh; /* Ensure there is enough content to scroll */
-  
+.box-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: rgb(95, 23, 35);
+  border-width: 3px 0px 3px 0px;
+  border-color: black;
+  border-style: solid;
 }
+
+.box-container #title {
+  position: relative;
+  top: -170px;
+  left: 150px;
+}
+
+.box-container .box {
+  position: relative;
+  top: 100px;
+  left: -150px;
+  width: 320px;
+  height: 320px;
+  margin: 38px;
+  margin-bottom: 138px;
+}
+
+.box-container .box:hover .image-box{
+  transform: translate(-100px);
+}
+
+.box-container .box:hover .text-box {
+  transform: translate(300px, 75px);
+  opacity: 1;
+}
+
+.image-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  transition: all 0.5s ease-in-out;
+}
+
+.image-box img {
+  width: 320px;
+  height: 320px;
+  object-fit: cover;
+  resize: both;
+}
+
+.text-box{
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: justify;
+  transition: all 0.5s ease;
+}
+
 
 .top-bar {
   position: fixed;
