--- a/style.css
+++ b/style.css
@@ -8,6 +8,57 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* HEADER, ICON AND BURGER MENU */
+
+.top-bar {
+  position: fixed;
+  align-items: center;
+  /* top: 0;
+  left: 0; */
+  width: 100%;
+  height: 45px;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  background-color: rgb(255, 255, 255);
+  z-index: 999;
+  opacity: 0;
+  /* transition: opacity 0.3s; */
+  transition: background-color 0.3s;
+}
+
+/* .top-bar:hover {
+  background-color: rgb(255, 255, 255);
+} */
+
+#burger-menu {
+  position: relative;
+  /* top: 22%; */
+  right: 4%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 25px;
+  opacity: 0;
+}
+
+.burger-menu span {
+  display: block;
+  height: 4px;
+  background: black;
+  border-radius: 2px;
+}
+
+.top-bar #icon {
+  position: relative;
+  opacity: 0;
+  left: 2%;
+  height: 100%;
+}
+
+/* MAIN IMAGE AND TEXT */
+
 .main-container {
   display: flex;
   height: 75vh;
@@ -21,6 +72,7 @@ body, html {
 
 
 .main-image-section #main_image {
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -42,6 +94,49 @@ body, html {
   text-wrap: wrap;
 }
 
+@keyframes shrinkDiv {
+  from {height: 75vh;}
+  to {height: 20vh;}
+}
+
+@keyframes enlargeDiv {
+  from {height: 20vh;}
+  to {height: 75vh;}
+}
+
+@keyframes shrinkImage {
+  from { width: 100%; height: 100%; }
+  to { top: 45px; width: 100px; height: 100px; }
+}
+@keyframes enlargeImage {
+  from { width: 100px; height: 100px;}
+  to { width: 100%; height: 100%;}
+}
+
+@keyframes showHeader {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes hideHeader {
+  from {opacity: 1;}
+  to {opacity: 0;}
+}
+
+@keyframes shrinkText {
+  from { width: 90%; opacity: 1; }
+  to { opacity: 0; transform: translateY(-250px) translateX(200px); }
+}
+
+@keyframes enlargeText {
+  from {opacity: 0; transform: translateY(-250px) translateX(200px);}
+  to { width: 90%; opacity: 1; transform: translateY(0); }
+}
+
+
+
+/* EMPLOYEE PRESENTATION */
+
 .box-container {
   position: relative;
   display: flex;
@@ -57,7 +152,7 @@ body, html {
 .box-container #title {
   position: relative;
   top: -170px;
-  left: 150px;
+  left: 200px;
 }
 
 .box-container .box {
@@ -105,67 +200,95 @@ body, html {
   transition: all 0.5s ease;
 }
 
+/* MAP INTRO CONTAINER */
 
-.top-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.9);
-  z-index: 999;
-  opacity: 0;
-  transition: opacity 0.3s;
-  transition: background-color 0.3s;
-}
-
-.top-bar:hover {
-  background-color: rgba(20, 19, 19, 0.3);
-}
-
-#burger-menu {
+.map-intro-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 25px;
-  opacity: 0;
+  align-items: center;
+  margin-bottom: 2vh;
 }
 
-.burger-menu span {
-  display: block;
-  height: 4px;
-  background: black;
-  border-radius: 2px;
+#mapIntroContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
 
-@keyframes shrinkImage {
-  from { width: 100%; height: 100%; }
-  to { width: 100px; height: 100px; }
-}
-@keyframes enlargeImage {
-  from { width: 100px; height: 100px;}
-  to { width: 100%; height: 100%;}
+#introTextSection {
+  width: 40%;
+  text-align: justify;
 }
 
-/* @keyframes shrinkText {
-  from { width: 0; opacity: 1; }
-  to { width: 100%; height: 100%;  opacity: 0; }
+/* PROPERTY CARROUSELL */
+
+.carr-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 40px;
 }
 
-@keyframes enlargeText {
-  from { width: 100%; height: 100%; opacity: 0;}
-  to { width: 0; height: 0; opacity: 1;}
-} */
-
-@keyframes shrinkText {
-  from { width: 90%; opacity: 1; }
-  to { opacity: 0; transform: translateY(-250px) translateX(200px); }
+.carr{
+  /* width: 100%; */
+  max-width: 800px;
+  height: 550px;
+  margin: 20px;
+  text-align: center;
+  border-radius: 20px;
+  position: relative;
 }
 
-@keyframes enlargeText {
-  from {opacity: 0; transform: translateY(-250px) translateX(200px);}
-  to { width: 90%; opacity: 1; transform: translateY(0); }
+.slides {
+  display: flex;
+  overflow-x: scroll;
+  position: relative;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+  height: 80%;
+}
+
+.slide {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  margin-right: 0px;
+  box-sizing: border-box;
+  transform-origin: center center;
+  transform: scale(1);
+  scroll-snap-align: center;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+}
+
+.slide a{
+  position: absolute;
+  top: 48%;
+  width: 35px;
+  height: 35px;
+  border: solid black;
+  border-width: 0 4px 4px 0;
+  padding: 3px;
+  box-sizing: border-box;
+}
+
+.slide-prev {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  left: 5%;
+}
+
+.slide-next{
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  right: 5%;
 }
