--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
 
 
 body, html {
-  /* max-width: 1278px; */
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* .wrapper {
+  max-width: 1260px; 
+  margin: 0 auto; 
+  padding: 0;
+} */
 
 /* HEADER, ICON AND BURGER MENU */
 
 .top-bar {
   position: fixed;
   align-items: center;
-  /* top: 0;
-  left: 0; */
+
   width: 100%;
   height: 45px;
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  padding: 10px;
   background-color: rgb(255, 255, 255);
   z-index: 999;
   opacity: 0;
@@ -35,7 +40,7 @@ body, html {
 #burger-menu {
   position: relative;
   /* top: 22%; */
-  right: 4%;
+  right: 27%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -54,15 +59,16 @@ body, html {
 .top-bar #icon {
   position: relative;
   opacity: 0;
-  left: 2%;
+  left: 27%;
   height: 100%;
 }
 
 /* MAIN IMAGE AND TEXT */
 
 .main-container {
+  margin-top: 0;
   display: flex;
-  height: 75vh;
+  height: 50vh;
   flex-direction: row;
 }
 
@@ -96,13 +102,13 @@ body, html {
 }
 
 @keyframes shrinkDiv {
-  from {height: 75vh;}
+  from {height: 50vh;}
   to {height: 20vh;}
 }
 
 @keyframes enlargeDiv {
   from {height: 20vh;}
-  to {height: 75vh;}
+  to {height: 50vh;}
 }
 
 @keyframes shrinkImage {
@@ -139,6 +145,7 @@ body, html {
 /* EMPLOYEE PRESENTATION */
 
 .box-container {
+  overflow: hidden;
   color: white;
   position: relative;
   display: flex;
@@ -211,13 +218,23 @@ body, html {
   transition: all 0.5s ease;
 }
 
+
+.full-width-bg {
+  width: 100%;
+  padding: 20px 0;
+}
+
+.inner-wrapper {
+  max-width: 1260px; /* Same max width as the wrapper */
+  margin: 20px 650px 60px 650px;
+  padding: 0 20px; /* Optional padding for breathing space */
+}
 /* MAP INTRO CONTAINER */
 
 .map-intro-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 2vh;
 }
 
 #mapIntroContainer {
@@ -246,8 +263,8 @@ body, html {
 .carr{
   color: white;
   background-color: rgb(95, 23, 35);
-  width: 900px;
-  height: 550px;
+  width: 1260px;
+  height: 650px;
   margin: 20px;
   text-align: center;
   border-radius: 20px;
