--- a/style.css
+++ b/style.css
@@ -323,7 +323,16 @@ h1 {
 .info {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 50%;
+}
+
+#description {
+  display: flex;
+  width: 60%;
+  text-align: justify;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
 }
 
 .slide a{
