--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ h1 {
 
 .slide {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-shrink: 0;
   width: 100%;
