--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h1 {
 #burger-menu {
   position: relative;
   /* top: 22%; */
-  right: 27%;
+  right: 19%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -77,7 +77,7 @@ h1 {
 .top-bar #icon {
   position: relative;
   opacity: 0;
-  left: 25%;
+  left: 15%;
   height: 100%;
 }
 
@@ -399,7 +399,17 @@ h1 {
   align-items: center;
   background-color: rgb(95, 23, 35);
   color: white;
+
+    /* width: 100%;
+    height: 350px;
+    background: #111;
+    position: fixed;
+     left: 0; bottom: 0;
+    z-index: -100;
+   */
 }
+
+
 
 .contact-and-socials {
   display: flex;
@@ -441,7 +451,7 @@ h1 {
 
 
 .svg-icon {
-  --svg-color: #FF0000; /* Change to your desired color */
+  color: #FF0000; /* Change to your desired color */
 }
 
 #facebook{
