--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body, html {
   
 }
 
-.wrapper
 
 h1 {
   font-family: "Trirong", Georgia, 'Times New Roman', Times, serif;
@@ -26,12 +25,6 @@ h1 {
   margin: 20px auto 60px auto;
   padding: 0 20px;
 }
-
-/* .wrapper {
-  max-width: 1260px; 
-  margin: 0 auto; 
-  padding: 0;
-} */
 
 /* HEADER, ICON AND BURGER MENU */
 
@@ -58,7 +51,7 @@ h1 {
 #burger-menu {
   position: relative;
   /* top: 22%; */
-  right: 19%;
+  right: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -77,7 +70,7 @@ h1 {
 .top-bar #icon {
   position: relative;
   opacity: 0;
-  left: 15%;
+  left: 18%;
   height: 100%;
 }
 
@@ -244,6 +237,9 @@ h1 {
   transform: translate(40px);
   background: rgb(122, 31, 46);
   width: 610px;
+  .image-box h2 {
+    opacity: 0;
+  }
 }
 
 .image-box {
@@ -260,6 +256,18 @@ h1 {
   height: 320px;
   object-fit: cover;
   resize: both;
+}
+
+.image-box h2 {
+    position: absolute;
+    bottom: 9px;
+    background-color: rgb(56, 14, 21);
+    width: 320px;
+    height: 40px;
+    opacity: 0.8;
+    border-radius: 0 0 10px 10px;
+    transition: opacity 0.4s ease;
+
 }
 
 .text-box{
@@ -295,13 +303,13 @@ h1 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 40px;
+  /* margin: 40px; */
 }
 
 .carr{
   color: white;
   background-color: rgb(95, 23, 35);
-  width: 1260px;
+  /* width: 1260px; */
   height: 650px;
   margin: 20px;
   text-align: center;
