--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ h1 {
 .box-container .box {
   /* background: rgb(122, 31, 46); */
   position: relative;
-  
+  border: 1px solid transparent;
   padding: 15px;
   width: 320px;
   height: 320px;
@@ -231,12 +231,16 @@ h1 {
 .box-container .box:hover .text-box {
   transform: translate(335px, 50px);
   opacity: 1;
+
+  
 }
 
 .box-container .box:hover {
   transform: translate(40px);
   background: rgb(122, 31, 46);
   width: 610px;
+  border: 1px solid black;
+
   .image-box h2 {
     opacity: 0;
   }
@@ -244,8 +248,8 @@ h1 {
 
 .image-box {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 320px;
+  height: 320px;
   z-index: 2;
   transition: all 0.5s ease-in-out;
 }
@@ -259,8 +263,9 @@ h1 {
 }
 
 .image-box h2 {
+  margin: 0;
     position: absolute;
-    bottom: 9px;
+    bottom: 0px;
     background-color: rgb(56, 14, 21);
     width: 320px;
     height: 40px;
